// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoundButton should render touchable  1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgb(235,235,235)",
        "borderColor": "#808080",
        "borderRadius": 75,
        "borderWidth": 1,
        "height": 75,
        "justifyContent": "center",
        "width": 75,
      }
    }
  >
    <Icon
      allowFontScaling={false}
      name="ios-add"
      size={12}
      style={
        Object {
          "color": "#3478f6",
        }
      }
    />
  </TouchableOpacity>
</View>
`;

exports[`RoundButton should render with vector icon  1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgb(235,235,235)",
        "borderColor": "#808080",
        "borderRadius": 75,
        "borderWidth": 1,
        "height": 75,
        "justifyContent": "center",
        "width": 75,
      }
    }
  >
    <Icon
      allowFontScaling={false}
      name="ios-add"
      size={12}
      style={
        Object {
          "color": "#3478f6",
        }
      }
    />
  </TouchableOpacity>
</View>
`;

exports[`RoundButton should render with vector icon specific size  1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgb(235,235,235)",
        "borderColor": "#808080",
        "borderRadius": 75,
        "borderWidth": 1,
        "height": 75,
        "justifyContent": "center",
        "width": 75,
      }
    }
  >
    <Icon
      allowFontScaling={false}
      name="ios-add"
      size={70}
      style={
        Object {
          "color": "#3478f6",
        }
      }
    />
  </TouchableOpacity>
</View>
`;

exports[`RoundButton should render without issues 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgb(235,235,235)",
        "borderColor": "#808080",
        "borderRadius": 75,
        "borderWidth": 1,
        "height": 75,
        "justifyContent": "center",
        "width": 75,
      }
    }
  >
    <Icon
      allowFontScaling={false}
      name="ios-add"
      size={12}
      style={
        Object {
          "color": "#3478f6",
        }
      }
    />
  </TouchableOpacity>
</View>
`;
